--- a/src/app/pages/fbpages/fbpages.component.html
+++ b/src/app/pages/fbpages/fbpages.component.html
@@ -2,15 +2,25 @@
   <content>
     <div class="col-md-6 offset-md-3 col-sm-12 col-lg-6">
       <nb-card [size]="'small'" style="height: 100%">
-        <nb-card-header style="text-align:center">
-          <div *ngIf="templateId"><img src="https://s3.eu-central-1.amazonaws.com/botsoft/templates/{{templateId}}.jpeg" style="width:80%; height: auto;" /></div>
-            Connect Facebook Page
+
+        <nb-card-header>
+          <div style="text-align:center">
+            <div *ngIf="templateId">
+              <img src="https://s3.eu-central-1.amazonaws.com/botsoft/templates/{{templateId}}.jpeg" style="width:80%; height: auto;"
+              />
+            </div>
+            <span *ngIf="templateId">Connect Facebook Page</span>
+            <span *ngIf="!templateId">Configure Your Bot <div style="font-weight: 200; font-size: 15px;"><a href="https://botsoft.ai/#botsoft-menu-all">or create a new one</a></div></span>
+          </div>
+       
         </nb-card-header>
         <nb-card-body>
           <div class="contact" *ngFor="let fbpage of fbpages">
             <nb-user [name]="fbpage.name" [title]="fbpage.category" picture="http://graph.facebook.com/{{ fbpage.id }}/picture" size="large"></nb-user>
-            <a *ngIf="!fbpage.hasBotInstalled" class="action" style="cursor: pointer;" (click)="setup(fbpage.id, fbpage.name, fbpage.access_token)"><i class="i-contact ion-ios-download-outline"></i>Connect</a>
-            <a *ngIf="fbpage.hasBotInstalled" class="action" href="#/bot/{{fbpage.id}}"><i class="i-contact ion-ios-gear-outline" style="color:#42db7c"></i>Configure</a>
+            <a *ngIf="!fbpage.hasBotInstalled" class="action" style="cursor: pointer;" (click)="setup(fbpage.id, fbpage.name, fbpage.access_token)">
+              <i class="i-contact ion-ios-download-outline"></i>Connect</a>
+            <a *ngIf="fbpage.hasBotInstalled" class="action" href="#/bot/{{fbpage.id}}">
+              <i class="i-contact ion-ios-gear-outline" style="color:#42db7c"></i>Configure</a>
           </div>
         </nb-card-body>
       </nb-card>
