--- a/src/app/pages/create-item/create-item.component.html
+++ b/src/app/pages/create-item/create-item.component.html
@@ -1,6 +1,6 @@
 <div>
   <button class="btn btn-success btn-save" (click)="save()">Save</button>
-  <a href="#/bot/{{botId}}/items?category_id={{category_id}}" class="btn btn-secondary btn-save">Cancel</a>
+  <a href="#/bot/{{botId}}/items{{category_id ? '?category_id=' + category_id: ''}}" class="btn btn-secondary btn-save">Cancel</a>
 </div>
 <div class="row" style="margin-left: -15px;">
   <div class="col-md-3" style="min-width: 370px;">
