--- a/src/app/pages/flow/flow.component.scss
+++ b/src/app/pages/flow/flow.component.scss
@@ -23,4 +23,20 @@
   .btn-create {
     margin: 0 10px 20px 0;
   }
+
+  nb-card {
+    height: auto !important;
+  }
+
+  textarea {
+    margin-bottom: 20px;
+    resize: none;
+    border: 0; // margin-left: 105px;
+    height: auto;
+    overflow: auto;
+    outline: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+  }
 }
