--- a/src/app/pages/flow/modal/modal.component.html
+++ b/src/app/pages/flow/modal/modal.component.html
@@ -1,21 +1,84 @@
 <div class="modal-header">
-  <span>'🎉 Congratulations</span>
+  <span>Create Step</span>
   <button class="close" aria-label="Close" (click)="closeModal()">
     <span aria-hidden="true">&times;</span>
   </button>
 </div>
 <div class="modal-body">
-  <div>Your chatbot is created. Let's customize it!</div>
-  <br />
-  <div>
-    <span style="color: #3edc7e;">✔</span> Chatbot Created</div>
-  <div>
-    <span style="color: #3edc7e;">✔</span> Sample Data Added</div><br />
-    <div>Test your bot on <a href="https://m.me/{{pageId}}" target="_blank">https://m.me/{{pageId}}</a></div>
-    <div class="fb-send-to-messenger" messenger_app_id="498860363814397" [attr.page_id]="pageId" data-ref color="blue" size="large">
+  <div class="row">
+    <div class="col-6">
+      <nb-card (click)="create('text')">
+        <div class="details">
+          <div class="title">Text</div>
+          <div class="status"></div>
+        </div>
+      </nb-card>
+    </div>
+
+    <div class="col-6">
+      <nb-card (click)="create('qr-text')">
+        <div class="details">
+          <div class="title">Text Quick Reply</div>
+          <div class="status">
+            <a target="_blank" href="https://developers.facebook.com/docs/messenger-platform/send-messages/quick-replies#text">doc</a>
+          </div>
+        </div>
+      </nb-card>
+    </div>
+
+    <div class="col-6">
+      <nb-card (click)="create('qr-localtion')">
+        <div class="icon-container">
+          <div class="icon info">
+            <i class="ion-ios-location-outline"></i>
+          </div>
+        </div>
+        <div class="details">
+          <div class="title">Location Quick Reply</div>
+          <div class="status">
+            <a target="_blank" href="https://developers.facebook.com/docs/messenger-platform/send-messages/quick-replies#locations">doc</a>
+          </div>
+        </div>
+      </nb-card>
+    </div>
+
+    <div class="col-6">
+      <nb-card (click)="create('qr-phonenumber')">
+        <div class="icon-container">
+          <div class="icon info">
+            <i class="ion-android-call"></i>
+          </div>
+        </div>
+        <div class="details">
+          <div class="title">User Phone Number Quick Reply</div>
+          <div class="status">
+            <a target="_blank" href="https://developers.facebook.com/docs/messenger-platform/send-messages/quick-replies#userdata">doc</a>
+          </div>
+        </div>
+      </nb-card>
+    </div>
+
+    <div class="col-6">
+        <nb-card >
+          <div class="icon-container">
+            <div class="icon info">
+              <i class="ion-ios-email"></i>
+            </div>
+          </div>
+          <div class="details" (click)="create('qr-email')">
+            <div class="title">User Email Quick Reply</div>
+            <div class="status">
+              <a target="_blank" href="https://developers.facebook.com/docs/messenger-platform/send-messages/quick-replies#userdata">doc</a>
+            </div>
+          </div>
+        </nb-card>
       </div>
+
+
+
+  </div>
 </div>
 
-<div class="modal-footer">
-  <button class="btn btn-md btn-success" (click)="closeModal()">Customize It</button>
-</div>
+<!-- <div class="modal-footer">
+  <button class="btn btn-md btn-success" (click)="create()">Create</button>
+</div> -->
