--- a/src/app/pages/flow/card/card.component.html
+++ b/src/app/pages/flow/card/card.component.html
@@ -4,23 +4,28 @@
 
       <nb-actions size="small">
         <nb-action>
-
-          <i class="ion ion-ios-plus-empty" (click)="add()" title="Add"></i>
-
+          <i class="ion ion-ios-arrow-up" (click)="moveUpBlock()" title="Move Up"></i>
         </nb-action>
         <nb-action>
-
-          <i class="ion ion-ios-trash-outline" (click)="deleteBlock()" title="Delete"></i>
-
+          <i class="ion ion-ios-arrow-down" (click)="moveDownBlock()" title="Move Down"></i>
         </nb-action>
         <nb-action>
           <input [ngModel]="title" (ngModelChange)="titleChanged($event)">
+        </nb-action>
+        <nb-action>
+          <i class="ion ion-ios-search" (click)="isExpanded == true?isExpanded = false:isExpanded = true;" title="Expand"></i>
+        </nb-action>
+        <nb-action>
+          <i class="ion ion-ios-plus-empty" (click)="add()" title="Add"></i>
+        </nb-action>
+        <nb-action>
+          <i class="ion ion-ios-trash-outline" (click)="deleteBlock()" title="Delete"></i>
         </nb-action>
       </nb-actions>
 
     </nb-card-header>
 
-    <div class="details incard">
+    <div class="details incard" *ngIf="isExpanded">
       <div *ngFor="let step of steps; let idx = index; trackBy: customTrackBy">
         <div class="input-group">
           <div class="col-12">
