--- a/src/app/pages/flow/flow.component.html
+++ b/src/app/pages/flow/flow.component.html
@@ -8,7 +8,7 @@
     <nb-tab tabTitle="Design">
       <div style="width: 100%;">
         <div class="col-xxxl-12 col-md-12" *ngFor="let block of blocks; let idx = index">
-          <ngx-flow-card [steps]="block.steps" [title]="block.title" (titleChangedEvent)="titleChanged(idx, $event)" (messageEvent)="receiveDeleteMessage(idx)"></ngx-flow-card>
+          <ngx-flow-card [steps]="block.steps" [title]="block.title" (titleChangedEvent)="titleChanged(idx, $event)" (moveDownBlockEvent)="moveDownBlock(idx)" (moveUpBlockEvent)="moveUpBlock(idx)" (messageEvent)="receiveDeleteMessage(idx)"></ngx-flow-card>
         </div>
       </div>
     </nb-tab>
