--- a/src/app/pages/create-category/create-category.component.html
+++ b/src/app/pages/create-category/create-category.component.html
@@ -2,7 +2,7 @@
   <button class="btn btn-success btn-save" (click)="create()">Save</button>
   <a href="#/bot/{{botId}}/categories" class="btn btn-secondary btn-save">Cancel</a>
 </div>
-<div class="row" style="margin-left: -15px;">
+<div class="row" style="margin-left: -15px; padding-bottom: 130px;">
   <div class="col-md-3" style="min-width: 370px;">
     <nb-card size="small">
       <nb-card-body>
@@ -26,7 +26,7 @@
       </nb-card-footer>
     </nb-card>
   </div>
-  <div class="col-md-9">
+  <div class="col-md-8">
     <!-- <div class="row" *ngIf="category.id">
   <div class="col-md-2">
     <label>ID</label>
