--- a/src/app/pages/fbpages/fbpages.component.html
+++ b/src/app/pages/fbpages/fbpages.component.html
@@ -15,6 +15,7 @@
        
         </nb-card-header>
         <nb-card-body>
+          <div *ngIf="fbpages?.length == 0" class="contact">No Facebook Pages here! <a target="_blank" href="https://www.facebook.com/pages/create/">Create Facebook Page.</a></div>
           <div class="contact" *ngFor="let fbpage of fbpages">
             <nb-user [name]="fbpage.name" [title]="fbpage.category" picture="http://graph.facebook.com/{{ fbpage.id }}/picture" size="large"></nb-user>
             <a *ngIf="!fbpage.hasBotInstalled" class="action" style="cursor: pointer;" (click)="setup(fbpage.id, fbpage.name, fbpage.access_token)">
