--- a/src/app/pages/fbpages/fbpages.component.html
+++ b/src/app/pages/fbpages/fbpages.component.html
@@ -5,10 +5,10 @@
 
         <nb-card-header>
           <div style="text-align:center">
-            <div *ngIf="templateId">
+            <!-- <div *ngIf="templateId">
               <img src="https://s3.eu-central-1.amazonaws.com/botsoft/templates/{{templateId}}.jpeg" style="width:80%; height: auto;"
               />
-            </div>
+            </div> -->
             <span *ngIf="templateId">Connect Facebook Page</span>
             <span *ngIf="!templateId">Configure Your Bot <div style="font-weight: 200; font-size: 15px;"><a href="https://botsoft.ai/#botsoft-menu-all">or create a new one</a></div></span>
           </div>
