--- a/src/app/pages/items/card/card.component.html
+++ b/src/app/pages/items/card/card.component.html
@@ -20,11 +20,8 @@
         </div>
       </nb-action> -->
       <nb-action>
-          <a href="#/bot/{{botId}}/item?category_id={{category_id}}&id={{item_id}}">Edit</a>
+          <a href="#/bot/{{botId}}/item?id={{item_id}}">Edit</a>
         </nb-action>
-      <nb-action title="Single Price">
-        <b>{{price}}</b>
-      </nb-action>
       <nb-action>
           <a class="pointer" (click)="delete()">Delete</a>
       </nb-action>
