--- a/src/app/@theme/components/header/header.component.html
+++ b/src/app/@theme/components/header/header.component.html
@@ -4,7 +4,7 @@
       <i class="nb-menu"></i>
     </a>
     <div class="logo">
-      <a href="/#/pages"><img src="https://bot-soft.github.io/www/img/logo.png" style="min-width:186px; width: 50%; height: auto;" /></a>
+      <a href="/#/pages"><img src="https://bot-soft.github.io/www/images/logo.png" style="min-width:186px; width: 50%; height: auto;" /></a>
     </div>
   </div>
 </div>
@@ -14,5 +14,5 @@
     <nb-user [menu]="userMenu" [name]="user?.name" [picture]="user?.picture" size="large"></nb-user>
   </nb-action>
   <nb-action class="control-item" disabled icon="nb-notifications"></nb-action>
-  <nb-action *ngIf="botInfo?.license != 'pro'" class="control-item" style="padding-top: 10px;"><a onclick="fastspring.builder.checkout(); return true;" style="color: #0084ff; cursor: pointer;"> Remove 'Powered by BotSoft'</a></nb-action>
+  <!-- <nb-action *ngIf="botInfo?.license != 'pro'" class="control-item" style="padding-top: 10px;"><a onclick="fastspring.builder.checkout(); return true;" style="color: #0084ff; cursor: pointer;"> Remove 'Powered by BotSoft'</a></nb-action> -->
 </nb-actions>
