--- a/src/app/pages/create-category/create-category.component.scss
+++ b/src/app/pages/create-category/create-category.component.scss
@@ -2,6 +2,7 @@
 @import '~@nebular/theme/styles/global/bootstrap/hero-buttons';
 
 @include nb-install-component() {
+
   nb-tabset {
     height: 100%;
     display: flex;
@@ -39,6 +40,7 @@
     flex-direction: column;
     padding: 0;
   }
+
   .picture {
     background-position: center;
     background-size: cover;
@@ -47,18 +49,22 @@
     border-top-right-radius: nb-theme(card-border-radius);
     flex: 1;
   }
+
   .details {
     padding: 1.25rem 1.25rem 0;
+
     .title {
       font-family: nb-theme(font-secondary);
       font-weight: nb-theme(font-weight-bold);
       color: nb-theme(color-fg-heading);
       font-size: 1.5rem;
       margin-bottom: 1rem;
+
       @include nb-for-theme(cosmic) {
         font-weight: nb-theme(font-weight-bolder);
       }
     }
+
     .description {
       text-align: justify;
       color: nb-theme(color-fg-text);
@@ -68,21 +74,26 @@
       max-height: calc(1rem * 8 * #{nb-theme(line-height)});
     }
   }
+
   .pointer {
     cursor: pointer;
   }
+
   nb-card-footer {
     display: flex;
     justify-content: space-around;
     border-top: 1px solid #eceff5;
     margin-top: 10px;
     padding: 0.75rem 0;
+
     a {
       text-decoration: none;
       color: nb-theme(color-fg);
+
       &:hover {
         color: nb-theme(color-fg-heading);
       }
+
       i {
         font-size: 1.75rem;
       }
@@ -90,6 +101,16 @@
   }
 }
 
+.property-row {
+  margin-left: 1.25rem;
+  margin-bottom: 0;
+  color: #a4abb3;
+}
+
 .input-field {
+  padding-top: 20px;
+}
+
+.group-area {
   padding-top: 20px;
 }
