--- a/src/app/pages/items/items.component.html
+++ b/src/app/pages/items/items.component.html
@@ -4,7 +4,7 @@
 </div>
 <div class="row">
   <div class="col-xxxl-3 col-md-6" *ngFor="let item of items">
-    <ngx-items-card (messageEvent)="receiveDeleteMessage($event)" [price]="item.price+item.currency" [item_id]="item?.id" [category_id]="item?.category_id"
+    <ngx-items-card (messageEvent)="receiveDeleteMessage($event)" [item_id]="item?.id" [parent_id]="item?.parent_id"
       [image]="item.image_url" [subtitle]="item.subtitle" [title]="item.title"></ngx-items-card>
   </div>
 </div>
